Update swagger
Add all the models into classification swagger

Add predicting points by description swagger
